--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Test</title>
+</head>
+<body style="background:white; color:black;">
+  <h1>IT WORKS</h1>
+  <p>If you can see this, GitHub Pages is working.</p>
+</body>
+</html>
  
