--- a/index.html
+++ b/index.html
@@ -1,12 +1,181 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Test</title>
+  <meta charset="UTF-8" />
+  <title>Rebirth Chess</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    :root{
+      --bg:#f5f5f5;
+      --panel:#ffffff;
+      --board-light:#eeeed2;
+      --board-dark:#769656;
+      --accent:#4fd1ff; /* brilliant cyan */
+      --danger:#d64545;
+      --text:#1f1f1f;
+    }
+    body{
+      margin:0; font-family:system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background:var(--bg); color:var(--text); overflow:hidden;
+    }
+    #menu, #game, #overlay{
+      position:absolute; inset:0;
+    }
+    #menu{
+      display:flex; align-items:center; justify-content:center;
+      background:radial-gradient(circle at center, rgba(0,0,0,0.05), rgba(0,0,0,0.2)),
+                 repeating-linear-gradient(45deg, #0001 0 2px, #0000 2px 8px);
+    }
+    .menu-card{
+      background:var(--panel); border-radius:16px; padding:32px; width:360px;
+      box-shadow:0 20px 50px rgba(0,0,0,.25); text-align:center;
+    }
+    h1{margin-top:0}
+    button{
+      padding:12px 16px; border-radius:12px; border:none; cursor:pointer;
+      background:#333; color:white; font-size:16px; margin-top:12px;
+    }
+    button.secondary{background:#777}
+
+    #game{display:none; grid-template-columns: auto 240px; gap:16px; padding:16px;}
+
+    #board{
+      display:grid; grid-template-columns:repeat(8, 1fr); width:480px; height:480px;
+      border-radius:12px; overflow:hidden; box-shadow:0 10px 30px rgba(0,0,0,.3);
+    }
+    .square{display:flex; align-items:center; justify-content:center; font-size:36px; cursor:pointer;}
+    .light{background:var(--board-light)}
+    .dark{background:var(--board-dark)}
+    .highlight{box-shadow: inset 0 0 0 4px rgba(0,0,0,.25)}
+
+    #side{
+      background:var(--panel); border-radius:16px; padding:16px;
+      box-shadow:0 10px 30px rgba(0,0,0,.2);
+    }
+
+    #overlay{
+      pointer-events:none; display:none; align-items:center; justify-content:center;
+      background:rgba(0,0,0,.55);
+    }
+
+    #overlay.show{display:flex}
+
+    .flash{
+      position:absolute; inset:0; box-shadow: inset 0 0 0 12px var(--accent);
+      animation:flash 1s ease-out forwards;
+    }
+    @keyframes flash{from{opacity:1}to{opacity:0}}
+
+    .gray{filter:grayscale(1)}
+
+    .heart{
+      font-size:120px; opacity:.2; position:absolute;
+    }
+
+  </style>
 </head>
-<body style="background:white; color:black;">
-  <h1>IT WORKS</h1>
-  <p>If you can see this, GitHub Pages is working.</p>
+<body>
+
+<div id="menu">
+  <div class="menu-card">
+    <h1>Rebirth Chess</h1>
+    <p>Challenge Mode</p>
+    <button id="startBtn">Start Game</button>
+    <button class="secondary" id="settingsBtn">Settings</button>
+  </div>
+</div>
+
+<div id="game">
+  <div id="board"></div>
+  <div id="side">
+    <h3>Status</h3>
+    <div>Moves per turn: <span id="movesLeft">1</span></div>
+    <div>Score: <span id="score">Hidden</span></div>
+    <hr />
+    <div id="log"></div>
+  </div>
+</div>
+
+<div id="overlay">
+  <div class="heart">💔</div>
+</div>
+
+<script>
+/* =====================
+   BASIC GAME SCAFFOLD
+   ===================== */
+
+const menu = document.getElementById('menu');
+const game = document.getElementById('game');
+const boardEl = document.getElementById('board');
+const overlay = document.getElementById('overlay');
+const movesLeftEl = document.getElementById('movesLeft');
+
+let movesPerTurn = 1;
+let selected = null;
+let board = [];
+
+const PIECES = {
+  wP:'♙', wR:'♖', wN:'♘', wB:'♗', wQ:'♕', wK:'♔',
+  bP:'♟'
+};
+
+function initBoard(){
+  board = Array(8).fill(null).map(()=>Array(8).fill(null));
+  for(let i=0;i<8;i++) board[6][i]='wP';
+  board[7] = ['wR','wN','wB','wQ','wK','wB','wN','wR'];
+  board[1][4] = 'bP'; // enemy starts with one pawn
+}
+
+function drawBoard(){
+  boardEl.innerHTML='';
+  for(let r=0;r<8;r++){
+    for(let c=0;c<8;c++){
+      const sq=document.createElement('div');
+      sq.className='square '+((r+c)%2?'dark':'light');
+      sq.dataset.r=r; sq.dataset.c=c;
+      if(board[r][c]) sq.textContent = PIECES[board[r][c]];
+      if(selected && selected.r==r && selected.c==c) sq.classList.add('highlight');
+      sq.onclick=()=>onSquareClick(r,c);
+      boardEl.appendChild(sq);
+    }
+  }
+}
+
+function onSquareClick(r,c){
+  if(!selected){
+    if(board[r][c] && board[r][c][0]==='w'){
+      selected={r,c}; drawBoard();
+    }
+  } else {
+    movePiece(selected.r,selected.c,r,c);
+    selected=null; drawBoard();
+  }
+}
+
+function movePiece(sr,sc,tr,tc){
+  board[tr][tc]=board[sr][sc];
+  board[sr][sc]=null;
+}
+
+function enemyTurn(){
+  setTimeout(()=>{
+    // simple forced capture logic placeholder
+    drawBoard();
+  },500);
+}
+
+function startGame(){
+  menu.style.display='none';
+  game.style.display='grid';
+  initBoard(); drawBoard();
+}
+
+// UI EVENTS
+document.getElementById('startBtn').onclick=startGame;
+
+</script>
 </body>
 </html>
+
  
