--- a/index.html
+++ b/index.html
@@ -1,181 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Rebirth Chess</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    :root{
-      --bg:#f5f5f5;
-      --panel:#ffffff;
-      --board-light:#eeeed2;
-      --board-dark:#769656;
-      --accent:#4fd1ff; /* brilliant cyan */
-      --danger:#d64545;
-      --text:#1f1f1f;
-    }
-    body{
-      margin:0; font-family:system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background:var(--bg); color:var(--text); overflow:hidden;
-    }
-    #menu, #game, #overlay{
-      position:absolute; inset:0;
-    }
-    #menu{
-      display:flex; align-items:center; justify-content:center;
-      background:radial-gradient(circle at center, rgba(0,0,0,0.05), rgba(0,0,0,0.2)),
-                 repeating-linear-gradient(45deg, #0001 0 2px, #0000 2px 8px);
-    }
-    .menu-card{
-      background:var(--panel); border-radius:16px; padding:32px; width:360px;
-      box-shadow:0 20px 50px rgba(0,0,0,.25); text-align:center;
-    }
-    h1{margin-top:0}
-    button{
-      padding:12px 16px; border-radius:12px; border:none; cursor:pointer;
-      background:#333; color:white; font-size:16px; margin-top:12px;
-    }
-    button.secondary{background:#777}
+<meta charset="UTF-8">
+<title>Rebirth Chess</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    #game{display:none; grid-template-columns: auto 240px; gap:16px; padding:16px;}
+<style>
+:root{
+  --light:#eeeed2;
+  --dark:#769656;
+  --panel:#ffffff;
+  --text:#1f1f1f;
+}
 
-    #board{
-      display:grid; grid-template-columns:repeat(8, 1fr); width:480px; height:480px;
-      border-radius:12px; overflow:hidden; box-shadow:0 10px 30px rgba(0,0,0,.3);
-    }
-    .square{display:flex; align-items:center; justify-content:center; font-size:36px; cursor:pointer;}
-    .light{background:var(--board-light)}
-    .dark{background:var(--board-dark)}
-    .highlight{box-shadow: inset 0 0 0 4px rgba(0,0,0,.25)}
+body{
+  margin:0;
+  font-family:system-ui, sans-serif;
+  color:var(--text);
+  overflow:hidden;
+}
 
-    #side{
-      background:var(--panel); border-radius:16px; padding:16px;
-      box-shadow:0 10px 30px rgba(0,0,0,.2);
-    }
+/* ===== BACKGROUND ===== */
+.background{
+  position:fixed;
+  inset:0;
+  background:
+    repeating-linear-gradient(
+      45deg,
+      #0001 0 20px,
+      #0000 20px 40px
+    ),
+    repeating-linear-gradient(
+      -45deg,
+      #0001 0 20px,
+      #0000 20px 40px
+    );
+  filter:blur(6px);
+  transform:scale(1.1);
+  z-index:-1;
+}
 
-    #overlay{
-      pointer-events:none; display:none; align-items:center; justify-content:center;
-      background:rgba(0,0,0,.55);
-    }
+/* ===== MENU ===== */
+#menu{
+  position:absolute; inset:0;
+  display:flex; align-items:center; justify-content:center;
+}
 
-    #overlay.show{display:flex}
+.menu-card{
+  background:var(--panel);
+  padding:32px;
+  border-radius:16px;
+  width:360px;
+  text-align:center;
+  box-shadow:0 20px 40px rgba(0,0,0,.3);
+}
 
-    .flash{
-      position:absolute; inset:0; box-shadow: inset 0 0 0 12px var(--accent);
-      animation:flash 1s ease-out forwards;
-    }
-    @keyframes flash{from{opacity:1}to{opacity:0}}
+button{
+  width:100%;
+  padding:14px;
+  margin-top:12px;
+  border:none;
+  border-radius:12px;
+  font-size:16px;
+  cursor:pointer;
+  background:#333;
+  color:white;
+}
 
-    .gray{filter:grayscale(1)}
+/* ===== GAME ===== */
+#game{
+  display:none;
+  position:absolute;
+  inset:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:24px;
+  padding:24px;
+}
 
-    .heart{
-      font-size:120px; opacity:.2; position:absolute;
-    }
+/* Board wrapper keeps it centered and fixed */
+#board-wrapper{
+  height:80vh;
+  aspect-ratio:1/1;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
 
-  </style>
+#board{
+  width:100%;
+  height:100%;
+  display:grid;
+  grid-template-columns:repeat(8,1fr);
+  border-radius:16px;
+  overflow:hidden;
+  box-shadow:0 15px 40px rgba(0,0,0,.4);
+}
+
+.square{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:clamp(28px, 4vw, 56px);
+  cursor:pointer;
+  user-select:none;
+}
+
+.light{ background:var(--light); }
+.dark{ background:var(--dark); }
+
+.selected{
+  box-shadow: inset 0 0 0 4px rgba(0,0,0,.35);
+}
+
+/* ===== SIDE PANEL ===== */
+#side{
+  width:220px;
+  background:var(--panel);
+  border-radius:16px;
+  padding:16px;
+  box-shadow:0 15px 40px rgba(0,0,0,.3);
+}
+
+/* ===== OVERLAY ===== */
+#overlay{
+  position:absolute;
+  inset:0;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  background:rgba(0,0,0,.5);
+  color:white;
+  font-size:48px;
+}
+</style>
 </head>
+
 <body>
+<div class="background"></div>
 
 <div id="menu">
   <div class="menu-card">
     <h1>Rebirth Chess</h1>
-    <p>Challenge Mode</p>
     <button id="startBtn">Start Game</button>
-    <button class="secondary" id="settingsBtn">Settings</button>
   </div>
 </div>
 
 <div id="game">
-  <div id="board"></div>
+  <div id="board-wrapper">
+    <div id="board"></div>
+  </div>
+
   <div id="side">
     <h3>Status</h3>
-    <div>Moves per turn: <span id="movesLeft">1</span></div>
-    <div>Score: <span id="score">Hidden</span></div>
-    <hr />
-    <div id="log"></div>
+    <div>Moves / turn: <b id="moves">1</b></div>
+    <div>Enemy pawns: <b id="enemyPawns">1</b></div>
   </div>
 </div>
 
-<div id="overlay">
-  <div class="heart">💔</div>
-</div>
+<div id="overlay">DEFEAT</div>
 
 <script>
-/* =====================
-   BASIC GAME SCAFFOLD
-   ===================== */
+/* ===== GAME STATE ===== */
+const boardEl = document.getElementById("board");
+const menu = document.getElementById("menu");
+const game = document.getElementById("game");
+const enemyPawnEl = document.getElementById("enemyPawns");
 
-const menu = document.getElementById('menu');
-const game = document.getElementById('game');
-const boardEl = document.getElementById('board');
-const overlay = document.getElementById('overlay');
-const movesLeftEl = document.getElementById('movesLeft');
-
-let movesPerTurn = 1;
-let selected = null;
 let board = [];
+let selected = null;
+let enemyPawnCount = 1;
 
+/* ===== PIECES ===== */
 const PIECES = {
-  wP:'♙', wR:'♖', wN:'♘', wB:'♗', wQ:'♕', wK:'♔',
-  bP:'♟'
+  wP:"♙", wR:"♖", wN:"♘", wB:"♗", wQ:"♕", wK:"♔",
+  bP:"♟"
 };
 
+/* ===== INIT ===== */
 function initBoard(){
-  board = Array(8).fill(null).map(()=>Array(8).fill(null));
-  for(let i=0;i<8;i++) board[6][i]='wP';
-  board[7] = ['wR','wN','wB','wQ','wK','wB','wN','wR'];
-  board[1][4] = 'bP'; // enemy starts with one pawn
+  board = Array.from({length:8},()=>Array(8).fill(null));
+  for(let i=0;i<8;i++) board[6][i]="wP";
+  board[7]=["wR","wN","wB","wQ","wK","wB","wN","wR"];
+  board[1][4]="bP";
 }
 
+/* ===== DRAW ===== */
 function drawBoard(){
-  boardEl.innerHTML='';
+  boardEl.innerHTML="";
   for(let r=0;r<8;r++){
     for(let c=0;c<8;c++){
-      const sq=document.createElement('div');
-      sq.className='square '+((r+c)%2?'dark':'light');
-      sq.dataset.r=r; sq.dataset.c=c;
-      if(board[r][c]) sq.textContent = PIECES[board[r][c]];
-      if(selected && selected.r==r && selected.c==c) sq.classList.add('highlight');
-      sq.onclick=()=>onSquareClick(r,c);
+      const sq=document.createElement("div");
+      sq.className="square "+((r+c)%2?"dark":"light");
+      if(board[r][c]) sq.textContent=PIECES[board[r][c]];
+      if(selected && selected.r===r && selected.c===c) sq.classList.add("selected");
+      sq.onclick=()=>onClick(r,c);
       boardEl.appendChild(sq);
     }
   }
 }
 
-function onSquareClick(r,c){
+/* ===== PLAYER MOVE ===== */
+function onClick(r,c){
   if(!selected){
-    if(board[r][c] && board[r][c][0]==='w'){
-      selected={r,c}; drawBoard();
+    if(board[r][c]?.startsWith("w")){
+      selected={r,c};
+      drawBoard();
     }
-  } else {
-    movePiece(selected.r,selected.c,r,c);
-    selected=null; drawBoard();
+  }else{
+    board[r][c]=board[selected.r][selected.c];
+    board[selected.r][selected.c]=null;
+    selected=null;
+    drawBoard();
+    enemyTurn();
   }
 }
 
-function movePiece(sr,sc,tr,tc){
-  board[tr][tc]=board[sr][sc];
-  board[sr][sc]=null;
-}
-
+/* ===== AI ===== */
 function enemyTurn(){
   setTimeout(()=>{
-    // simple forced capture logic placeholder
-    drawBoard();
+    const moves=[];
+    for(let r=0;r<8;r++){
+      for(let c=0;c<8;c++){
+        if(board[r][c]==="bP"){
+          if(r+1<8 && board[r+1][c]?.startsWith("w"))
+            moves.push([r,c,r+1,c,true]);
+          else if(r+1<8 && !board[r+1][c])
+            moves.push([r,c,r+1,c,false]);
+        }
+      }
+    }
+
+    const capture=moves.find(m=>m[4]);
+    const move=capture||moves[Math.floor(Math.random()*moves.length)];
+    if(move){
+      const [sr,sc,tr,tc]=move;
+      board[tr][tc]=board[sr][sc];
+      board[sr][sc]=null;
+      drawBoard();
+    }
   },500);
 }
 
-function startGame(){
-  menu.style.display='none';
-  game.style.display='grid';
-  initBoard(); drawBoard();
-}
-
-// UI EVENTS
-document.getElementById('startBtn').onclick=startGame;
-
+/* ===== START ===== */
+document.getElementById("startBtn").onclick=()=>{
+  menu.style.display="none";
+  game.style.display="flex";
+  initBoard();
+  drawBoard();
+};
 </script>
 </body>
 </html>
-
- 
